premiers-pas/01-pod-simple.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: premiers-pas-alpine
spec:
  containers:
    - name: alpine
      image: alpine:latest
