premiers-pas/01-pod-web.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: premiers-pas-hello-world
spec:
  containers:
    - name: hello-world
      image: tutum/hello-world:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
