premiers-pas/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: premiers-pas-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: premiers-pas-hello-world
  template:
    metadata:
      labels:
        app: premiers-pas-hello-world
    spec:
      containers:
        - name: hello-world
          image: tutum/hello-world:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
