premiers-pas/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: premiers-pas-hello-world
spec:
  selector:
    app: premiers-pas-hello-world
  ports:
    - port: 80
